--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -7,5 +7,26 @@
 </ion-header>
 
 <ion-content>
+  <ion-card>
+    <ion-card-header>
+      <ion-card-title></ion-card-title>
+    </ion-card-header>
 
+    <ion-card-content>
+      <ion-item>
+          <ion-label position="floating">User Id</ion-label>
+          <ion-input></ion-input>
+        </ion-item>
+        <ion-item>
+          <ion-label position="floating">Password</ion-label>
+          <ion-input ></ion-input>
+        </ion-item>
+        <ion-button color="primary" slot="end">
+            Clear
+        </ion-button>
+        <ion-button color="primary" (click)="login()" slot="end">
+            Login
+        </ion-button>
+    </ion-card-content>
+  </ion-card>
 </ion-content>
